<resources>
    <string name="app_name">记事本</string>
    
    <!-- Activity Titles -->
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_records">我的笔记</string>
    <string name="title_activity_record_detail">笔记详情</string>
    
    <!-- Main Activity -->
    <string name="hint_note">在这里输入笔记内容...</string>
    <string name="save_to_file">保存到文件</string>
    <string name="load_from_file">从文件加载</string>
    <string name="save_as_note">保存为新笔记</string>
    <string name="file_saved">文件保存成功</string>
    <string name="file_not_found">未找到保存的文件</string>
    <string name="error_loading">加载笔记失败</string>
    
    <!-- Settings Activity -->
    <string name="auto_save">自动保存笔记</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="save_settings">保存设置</string>
    <string name="settings_saved">设置已保存</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    
    <!-- Record List Activity -->
    <string name="no_notes">还没有笔记，快来创建一个吧！</string>
    <string name="new_note">新建笔记</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确定要删除这条笔记吗？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    
    <!-- Menu Items -->
    <string name="menu_settings">设置</string>
    <string name="menu_notes">我的笔记</string>
    
    <!-- Database -->
    <string name="title_hint">标题</string>
    <string name="content_hint">内容</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="note_saved">笔记已保存</string>
    <string name="note_deleted">笔记已删除</string>
    <string name="error_saving">保存笔记失败</string>
    <string name="error_deleting">删除笔记失败</string>
    
    <!-- Date/Time Format -->
    <string name="date_format">yyyy年MM月dd日 HH:mm</string>
</resources>